# mammocat

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  llms.txt  package-lock.json  package.json  pyproject.toml
.circleci/: config.yml
.github/: actionlint.yaml
.github/workflows/: ci.yml  dependency-health.yml  platforms.yml  production-build.yml  slow-linux.yml
benchmarks/: dbt_combine_memory.py  metadata_file_memory.py
core/: Cargo.toml
core/benches/: mammoplan.rs
core/src/: api.rs  completion.rs  dbt.rs  dicom_files.rs  error.rs  lib.rs  main.rs  planning.rs  registry.rs  validation.rs
core/src/cli/: mod.rs  report.rs
core/src/extraction/: laterality.rs  mammo_type.rs  mod.rs  tags.rs  view_modifiers.rs  view_position.rs
core/src/python/: dbt.rs  enums.rs  errors.rs  extractor.rs  filter.rs  macros.rs  metadata.rs  mod.rs  planning.rs  record.rs  selection.rs  utils.rs  validation.rs
core/src/selection/: mod.rs  record.rs  views.rs
core/src/types/: enums.rs  filter.rs  image_type.rs  mod.rs  pixel_spacing.rs  view.rs
core/tests/: dbt.rs  mammofill.rs  view_modifiers.rs
node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
node/npm/darwin-arm64/: README.md  package.json
node/npm/darwin-x64/: README.md  package.json
node/npm/linux-x64-gnu/: README.md  package.json
node/npm/win32-x64-msvc/: README.md  package.json
node/src/: lib.rs
node/test/: dicom-fixtures.mjs  git-install.integration.mjs  index.test.mjs  types.ts
python/mammocat/: __init__.py  _mammocat.pyi
scripts/ci/: __init__.py  bootstrap_rustup.py  deprecation_report.py  reporting.py  security_audit.py  verify_production.py
tests/: __init__.py  conftest.py  test_api.py  test_ci_reporting.py  test_dbt_combine.py  test_enums.py  test_planning.py  test_validation.py
