[package]
name = "mammocat-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# DICOM handling
dicom = "0.9"
dicom-core = "0.9"
dicom-dictionary-std = "0.9"
dicom-object = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "1.0"

# Utilities
regex = "1.10"
log = "0.4"
env_logger = "0.11"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
uuid = { version = "=1.23.3", features = ["v4"] }

# JSON/report output
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Python bindings (optional)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[dev-dependencies]
tempfile = "3.10"
rstest = "0.19"

[features]
json = []
python = ["pyo3"]

[lib]
name = "mammocat_core"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "mammocat"
path = "src/main.rs"

[[bin]]
name = "mammoselect"
path = "src/bin/mammoselect.rs"

[[bin]]
name = "mammovalidate"
path = "src/bin/mammovalidate.rs"

[[bin]]
name = "dbt-combine"
path = "src/bin/dbt-combine.rs"
