[package]
name = "mammocat-node"
version = "0.2.0"
edition = "2021"
rust-version = "1.88"

[lib]
crate-type = ["cdylib"]

[dependencies]
mammocat-core = { path = "../core" }
napi = { version = "=3.10.3", default-features = false, features = ["napi6", "serde-json"] }
napi-derive = "=3.5.9"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
napi-build = "=2.3.2"
